@@ -138,9 +138,14 @@ class Renderer(base.Renderer):
     def __init__(self, *args):
         base.Renderer.__init__(self, *args)
         context = aq_inner(self.context)
+        self.ploneview = context.restrictedTraverse('@@plone')
+        self.pm = getToolByName(context, 'portal_membership')
+
+    def _clean_session(self):
         request = self.request
         try:
             session = request.get('SESSION', None)
+            print 'aaa'
         except SessionDataManagerErr:
             logger.debug('Error occurred getting session data. Falling back to '
                     'request.')
@@ -152,10 +157,9 @@ class Renderer(base.Renderer):
                 session.delete('typeupload')
             if session.has_key('mediaupload') :
                 session.delete('mediaupload')
-        self.ploneview = context.restrictedTraverse('@@plone')
-        self.pm = getToolByName(context, 'portal_membership')
 
     def render(self):
+        self._clean_session()
         return xhtml_compress(self._template())
 
     @property
